taskcar-motor-driver/build/log/idf_py_stderr_output_95470
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/components/motor_driver/motor_driver.c:7: warning: "CONFIG_LOG_MAXIMUM_LEVEL" redefined
    7 | #define CONFIG_LOG_MAXIMUM_LEVEL ESP_LOG_VERBOSE
      | 
In file included from /home/joagz/esp/esp-idf/components/newlib/platform_include/assert.h:12,
                 from /home/joagz/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/sys-include/sys/reent.h:458,
                 from /home/joagz/esp/esp-idf/components/newlib/platform_include/sys/reent.h:22,
                 from /home/joagz/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/sys-include/stdio.h:60,
                 from /home/joagz/esp/esp-idf/components/esp_common/include/esp_err.h:10,
                 from /home/joagz/esp/esp-idf/components/driver/ledc/include/driver/ledc.h:9,
                 from /home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/components/motor_driver/motor_driver.c:1:
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/build/config/sdkconfig.h:487: note: this is the location of the previous definition
  487 | #define CONFIG_LOG_MAXIMUM_LEVEL 3
      | 
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/main.c: In function 'app_main':
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/main.c:26:9: error: implicit declaration of function 'ESP_LOG'; did you mean 'ESP_LOGD'? [-Werror=implicit-function-declaration]
   26 |         ESP_LOG("duty", i);
      |         ^~~~~~~
      |         ESP_LOGD
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5663: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
